force-app/main/default/objects/ApplicationToDoList__c/ApplicationToDoList__c.object-meta.xml
<CustomObject>
    <label>Application To Do List</label>
    <nameField>
        <displayFormat>AP-{000000}</displayFormat>
        <label>Application Process</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application To Do List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>