force-app/main/default/objects/ApplicationToDoList__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Applicationn__c</referenceTo>
    <relationshipName>Application_Process</relationshipName>
    <type>Lookup</type>
</CustomField>