force-app/main/default/objects/ApplicationToDoList__c/fields/NextStage__c.field-meta.xml
<CustomField>
    <fullName>NextStage__c</fullName>
    <label>Next Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Application_Stage</valueSetName>
    </valueSet>
</CustomField>