force-app/main/default/objects/ApplicationToDoList__c/fields/PIC_User__c.field-meta.xml
<CustomField>
    <fullName>PIC_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_To_Do_List</relationshipName>
    <type>Lookup</type>
</CustomField>