force-app/main/default/objects/ApplicationToDoList__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Order__c</columns>
    <columns>NAME</columns>
    <columns>Application__c</columns>
    <columns>Action__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>